<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Task Reminder App</string>
    <string name="no_reminders_note">No Reminders Yet.</string>
    <string name="remind_Title">Reminder Title</string>
    <string name="reminder_Body">Reminder Body</string>
    <string name="reminder_Date">Date</string>
    <string name="reminder_Time">Reminder Time</string>
    <string name="reminder_confirm">Save</string>
    <string name="menu_Insert">Add Reminder</string>
    <string name="menu_Delete">Delete</string>
    <string name="task_saved_message">Task has been saved</string>
</resources>
